# LifeEngine

./: .gitignore  .gitmodules  CMakeDefinitions.cmake  CMakeLists.txt  README.MD  README.md  meson.build
res/: imgui.ini
res/base-shaders/: shader.frag  shader.vert
res/base-shaders/120/: shader.frag  shader.vert
res/base-shaders/330/: shader.frag  shader.vert
res/conf/: base.conf  scene0.conf  testbase.conf
res/content_packed/: placeholder.txt
res/icons/: lifeengine.rc  png-to-icon.sh
res/icons/Sources/: engineIcon.psd
res/models/: road_piece.fbx
res/models/Default_Character/: Capoeira.fbx  Idle.fbx  Sitting Laughing.fbx  injured backwards turn left.fbx  injured backwards turn right.fbx  injured hurting idle.fbx  injured idle.fbx  injured run backwards left turn.fbx  injured run backwards right turn.fbx  injured run backwards.fbx  injured run jump.fbx  injured run left turn.fbx  injured run right turn.fbx  injured run.fbx  injured standing jump.fbx  injured stumble idle.fbx  injured turn left.fbx  injured turn right.fbx  injured walk backwards.fbx  injured walk left turn.fbx  injured walk right turn.fbx  injured walk.fbx  injured wave idle.fbx
res/qss/: lifedefault.qss
res/shaders/: LIFE_3D_VERT.glsl  LIFE_3D_VERT_ANIMATED.glsl  LIFE_DEFAULTS.glsl  LIFE_LIT.glsl  LIFE_MATERIAL.glsl  blinnphong.glsl  card.glsl  cubemaptest.glsl  debug_lines.glsl  default.glsl  default_animated.glsl  error.glsl  lampshader.glsl  lighting.glsl  parsertest.glsl  parsertest2.glsl  particle_default.glsl  postprocess.glsl  postprocess_test.glsl  selection.glsl  selection_buffer.glsl  shader.glsl  skybox.glsl  transparent.glsl  unlit.glsl  vertexshader.glsl  white.glsl  wishfullthinking.glsl
src/: config.h.in  glpch.h  life_core.cpp  life_core.h  lifepch.h  main.cpp
src/SANDBOX/: Sandbox.cpp  Sandbox.h  SandboxLayer.cpp  SandboxLayer.h
src/applications/: Application.cpp  Application.hpp  LifeApplication.cpp  LifeApplication.hpp
src/cli/: CLIConfig.cpp  CLIConfig.h
src/command-line-interface/: cli.cpp  cli.h
src/components/: MaterialComponent.hpp  ModelComponent.hpp  StaticMeshComponent.hpp  TransformComponent.hpp  components
src/config/: libconfig.cpp  libconfig.hpp  life_config  lifeconfig.hpp
src/di/: CMakeLists.txt  DI.cpp  DI.h
src/ecs/: CMakeLists.txt  Component.cpp  Component.hpp  ECS.hpp  Entity.cpp  Entity.hpp  System.hpp  ecs
src/engine/: Application.cpp  Application.h
src/events/: ApplicationEvents.hpp  Event.cpp  Event.hpp  KeyEvents.hpp  MouseEvents.hpp
src/extensions/: hash_combine  metafunctions.h  not_implemented_yet_exception.h  overload  stringextensions.cpp  stringextensions.h
src/imgui/: imguibuild.cpp
src/kuma/: AAFrameBuffer.cpp  AAFrameBuffer.hpp  AssimpLoader.hpp  Camera.hpp  CubeTexture.cpp  CubeTexture.hpp  DebugMesh.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IKumaBindable.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LifeSelectable.hpp  Material.cpp  Material.hpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  assetdefines.cpp  assetdefines.h  default_resources.cpp  default_resources.hpp  default_shapes.hpp  (+6 more)
src/kuma/animation/: AnimatedModel.cpp  AnimatedModel.hpp  Animation.hpp  Bone.hpp
src/kuma/shader_compiler/: LifeShaderCompiler.cpp  LifeShaderCompiler.hpp  Precompiler.cpp  Precompiler.hpp  ShaderSource.hpp
src/layers/: EditorLayer.cpp  EditorLayer.hpp  Layer.h  Layer.hpp  LayerCollection.cpp  LayerCollection.h  LayerStack.cpp  LayerStack.hpp  PrimitiveConstructor.cpp  PrimitiveConstructor.hpp  RenderLayer.cpp  RenderLayer.hpp  SandboxLayer.cpp  SandboxLayer.hpp  SelectorLayer.cpp  SelectorLayer.hpp  layers
src/layers/editors/: EditorMenus.cpp  EditorMenus.hpp  KumaTypeEditors.cpp  KumaTypeEditors.hpp
src/layers/staging/: ComponentStaging.cpp  ComponentStaging.hpp  LayerStaging.hpp  SystemStaging.hpp
src/rendering/: debugging.cpp  debugging.h  testmain.cpp
src/rendering/basics/: Mesh.h  Vertex.cpp  Vertex.h
src/rendering/shader/: Shader.cpp  Shader.h  ShaderParser.cpp  ShaderParser.h
src/systems/: DebugSystem.cpp  DebugSystem.hpp
src/systems/rendering/: AnimationSystem.cpp  AnimationSystem.hpp  GizmosRenderSystem.cpp  GizmosRenderSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/util/: CLIConfig.cpp  CLIConfig.h  DebugInfo.cpp  DebugInfo.h  FileSystem.cpp  FileSystem.hpp  Random.cpp  Random.hpp  TaskPool.h  TaskPool.hpp  Time.cpp  Time.h  Timer.hpp  Tree.hpp  metafunctions.h  ppcounter.h  utillities
src/window/: LinuxWindow.cpp  LinuxWindow.hpp  Window.hpp
test/: CMakeLists.txt  DITest.h  ECSTest.h  clitest.h  configtest.hpp  eventstest.hpp  layertest.hpp  logging.hpp  main.cpp  newecstest.hpp  sanitytests.h  shaderprecompilertest.hpp
